--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     <hr class="oncard1">
                     <div class="header2333 oncard1">
                         Copyright &copy; 2022 Fmkli. All rights reserved.
+                        <br>本主页比屎山还屎山，一堆Bug请见谅~
                         <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                         <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                         <br><span id="lasttime">载入倒计时...</span>
