--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     autoplay="false"
                     mutex="true"
                     list-folded="true"
+                    class="meting"
                 ></meting-js>
             </div>
 
