--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     mutex="true"
                     list-folded="true"
                     class="meting"
+                    fixed="true"
                 ></meting-js>
             </div>
 
