--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                     class="meting"
                     fixed="true"
                 ></meting-js>
+                <h2>
+                    没有看见播放器怎么办？不怕，你需要一台棒极拉的电脑（doge）
+                </h2>
             </div>
 
             <div class="shuanglan">
