--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     class="meting"
                     fixed="true"
                 ></meting-js>
-                <h2 style="text-align: center;color: aqua;">
+                <h2 style="text-align: center;color: rgb(145, 255, 0);">
                     没有看见播放器怎么办？不怕，你需要一台棒极拉的电脑（doge）
                 </h2>
             </div>
