--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     fixed="true"
                 ></meting-js>
                 <h2 style="text-align: center;color: rgb(145, 255, 0);">
-                    没有看见播放器怎么办？不怕，你需要一台棒极拉的电脑（doge）
+                    没有看见播放器怎么办？不怕，你需要一台棒极拉的电脑（doge）,还有瞧一眼左下角。
                 </h2>
             </div>
 
