--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         <h2 class="center">Fmkliの鸽子窝</h2>
                         <p class="center">
                             一个挣扎存活于网络边缘的网站，默默无闻
+                            站长开学后只在周五、周六、周日上线，封校除外。
                         </p>
 
                         <hr>
