--- a/index.html
+++ b/index.html
@@ -50,17 +50,22 @@
 
         <!-- 网站 主要内容-->
         <div class="background">
-
             <div class="upupzuiup">
-                <div class="caidananniu" id="caidananniu" onclick="openright();">
-                    更多
-                </div>
-                <div class="upupzuiup-text">
-                    鸽子主页
-                </div>
-                <div class="qitaanniu" id="caidananniu" onclick="openqita();">
-                    音乐
-                </div>
+                <ul class="headlist">
+                    <li class="headlistxuan">
+                        <div class="caidananniu" id="caidananniu" onclick="openright();">
+                            更多
+                        </div>
+                    </li>
+                    <li class="headlistxuan">
+                        <div class="qitaanniu" id="caidananniu" onclick="openqita();">
+                            音乐
+                        </div>
+                    </li>
+                    <div class="upupzuiup-text">
+                        鸽子主页
+                    </div>
+                </ul>
             </div>
 
             <!-- APlayer -->
