--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                     </li>
                     <li class="headlistxuan">
-                        <div class="qitaanniu" id="caidananniu" onclick="openqita();">
+                        <div class="caidananniu" id="caidananniu" onclick="openqita();">
                             音乐
                         </div>
                     </li>
