--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                         <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                         <br><span id="lasttime">载入倒计时...</span>
                         <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
+                        <br><h2><a href="https://www.imfmkli.top/video/114514.mp4">这是一个可点击的链接</a></h2>
 
                     </div>
 
