--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                         <a href="tencent://message/?uin=2058264685&Site=&Menu=yes">QQ</a>
                         <hr>
                         <h3>其他</h3>
+                        <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>--<a class="lianjie" href="https://www.zxqblog.cn/">小钊的博客</a>
                         <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                         <br><span id="lasttime">载入倒计时...</span>
                         <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
