--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
             </div>
         </div>
         <div class="footer-container text-center">
-            © 2022 By <a href="#">Fmkli</a>
-            <br>Make by <a href="https://github.com/KawaiiZapic">Zapic</a>
+            © 2022 By <a href="#">Fmkli</a> | Make by <a href="https://github.com/KawaiiZapic">Zapic</a>
             <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
         </div>
     </div>
