--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         Init(feedType, feedPath, bgArr, senArr);
     })();
 </script>
+<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 <style>
 
 </style>
