--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="static/css/loading.css">
     <link rel="stylesheet" href="static/css/qita.css">
+    <script src="jquery.min.js"></script>
 </head>
 <body class="locked">
     <div class="self-avatar flex-center">
@@ -87,7 +88,7 @@
 
                 </div>
                 <div class="self-content article-container">
-                    <div class="article-content"></div>
+                    <div class="article-content" id="shuoshuo"></div>
                     <div class="article-loading flex-center">
                         <svg style="visibility: hidden" class="loading-indicator" width="128" height="128">
                             <g class="circle-rotating">
