--- a/say.html
+++ b/say.html
@@ -14,60 +14,47 @@
 		<h1>其实呢，说说评论摆烂了，加载速度较慢</h1>
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
-<div id="tip" style="text-align:center;">ipseak加载中</div>
-<div id="ispeak"></div>
-<link
-  rel="stylesheet"
-  href="https://cdn.staticfile.org/highlight.js/10.6.0/styles/atom-one-dark.min.css"
-/>
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/ispeak@4.2.0/style.css"
-/>
-  <script src="https://unpkg.com/@waline/client@v2/dist/waline.js"></script>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/@waline/client@v2/dist/waline.css"
-  />
-			
-<style>
-  #article-container .D-avatar {
-    margin: 0 10px 0 0;
-  }
-  .D-footer {
-    display: none;
-  }
-</style>
-<script src="https://cdn.staticfile.org/highlight.js/10.6.0/highlight.min.js"></script>
-<script src="https://cdn.staticfile.org/marked/2.0.0/marked.min.js"></script>
-<script src="https://unpkg.com/ispeak@4.2.0/ispeak.umd.js"></script>
-<script>
-  var head = document.getElementsByTagName('head')[0]
-  var meta = document.createElement('meta')
-  meta.name = 'referrer'
-  meta.content = 'no-referrer'
-  head.appendChild(meta)
-  if (ispeak) {
-    ispeak
-      .init({
-        el: '#ispeak',
-        api: 'https://kkapi.imfmkli.top/',
-        author: '62fb537eea70bbc9782bcf6d',
-        pageSize: 10,
-        loading_img: 'https://www.imfmkli.top/pigen.png',
-        initCommentName: 'waline',
-        initCommentOptions: {
-          serverURLs: 'https://waline.imfmkli.top'
-        }
-      })
-      .then(function () {
-        console.log('ispeak 加载完成')
-        document.getElementById('tip').style.display = 'none'
-      })
-  } else {
-    document.getElementById('tip').innerHTML = 'ispeak依赖加载失败！'
-  }
-</script>
+                  <div id="tip" style="text-align:center;">ispeak加载中</div>
+                  <div id="ispeak"></div>
+                  <link
+                    rel="stylesheet"
+                    href="https://cdn.staticfile.org/highlight.js/10.6.0/styles/atom-one-dark.min.css"
+                  />
+                  <link
+                    rel="stylesheet"
+                    href="https://cdn.jsdelivr.net/npm/ispeak@4.4.0/style.css"
+                  />
+                  
+                  <script src="https://cdn.staticfile.org/highlight.js/10.6.0/highlight.min.js"></script>
+                  <script src="https://cdn.staticfile.org/marked/2.0.0/marked.min.js"></script>
+                  <script src="https://cdn.jsdelivr.net/npm/ispeak@4.4.0/ispeak.umd.js"></script>
+                  <!-- CSS -->
+                  <link href="https://unpkg.com/artalk@2.3.4/dist/Artalk.css" rel="stylesheet" />
+                  <!-- JS -->
+                  <script src="https://unpkg.com/artalk@2.3.4/dist/Artalk.js"></script>
+                  <script>
+                    var head = document.getElementsByTagName('head')[0]
+                    var meta = document.createElement('meta')
+                    meta.name = 'referrer'
+                    meta.content = 'no-referrer'
+                    head.appendChild(meta)
+                    if (ispeak) {
+                      ispeak
+                        .init({
+                          el: '#ispeak',
+                          api: 'https://waline.imfmkli.top',
+                          author: '61fe93508fd621d39a155725',
+                          pageSize: 10,
+                          loading_img: 'https://www.imfmkli.top/pigen.png',
+                        })
+                        .then(function () {
+                          console.log('ispeak 加载完成')
+                          document.getElementById('tip').style.display = 'none'
+                        })
+                    } else {
+                      document.getElementById('tip').innerHTML = 'ipseak依赖加载失败！'
+                    }
+                  </script>
 
                 </div>
 	    </div>
