--- a/say.html
+++ b/say.html
@@ -42,7 +42,7 @@
                       ispeak
                         .init({
                           el: '#ispeak',
-                          api: 'https://waline.imfmkli.top',
+                          api: 'https://waline.imfmkli.top/',
                           author: '61fe93508fd621d39a155725',
                           pageSize: 10,
                           loading_img: 'https://www.imfmkli.top/pigen.png',
