--- a/say.html
+++ b/say.html
@@ -22,12 +22,25 @@
                   />
                   <link
                     rel="stylesheet"
-                    href="https://cdn.jsdelivr.net/npm/ispeak@4.4.0/style.css"
+                    href="https://unpkg.com/ispeak@4.2.0/style.css"
                   />
-                  
+                    <script src="https://unpkg.com/@waline/client@v2/dist/waline.js"></script>
+                    <link
+                      rel="stylesheet"
+                      href="https://unpkg.com/@waline/client@v2/dist/waline.css"
+                    />
+                        
+                  <style>
+                    #article-container .D-avatar {
+                      margin: 0 10px 0 0;
+                    }
+                    .D-footer {
+                      display: none;
+                    }
+                  </style>
                   <script src="https://cdn.staticfile.org/highlight.js/10.6.0/highlight.min.js"></script>
                   <script src="https://cdn.staticfile.org/marked/2.0.0/marked.min.js"></script>
-                  <script src="https://cdn.jsdelivr.net/npm/ispeak@4.4.0/ispeak.umd.js"></script>
+                  <script src="https://unpkg.com/ispeak@4.2.0/ispeak.umd.js"></script>
                   <script>
                     var head = document.getElementsByTagName('head')[0]
                     var meta = document.createElement('meta')
