--- a/say.html
+++ b/say.html
@@ -28,10 +28,14 @@
                   <script src="https://cdn.staticfile.org/highlight.js/10.6.0/highlight.min.js"></script>
                   <script src="https://cdn.staticfile.org/marked/2.0.0/marked.min.js"></script>
                   <script src="https://cdn.jsdelivr.net/npm/ispeak@4.4.0/ispeak.umd.js"></script>
-                  <!-- CSS -->
-                  <link href="https://unpkg.com/artalk@2.3.4/dist/Artalk.css" rel="stylesheet" />
-                  <!-- JS -->
-                  <script src="https://unpkg.com/artalk@2.3.4/dist/Artalk.js"></script>
+                    <!-- 脚本文件 -->
+                    <script src="https://unpkg.com/@waline/client@v2/dist/waline.js"></script>
+                    <!-- 样式文件 -->
+                    <link
+                      rel="stylesheet"
+                      href="https://unpkg.com/@waline/client@v2/dist/waline.css"
+                    />
+
                   <script>
                     var head = document.getElementsByTagName('head')[0]
                     var meta = document.createElement('meta')
@@ -50,6 +54,12 @@
                             // 4.4.0 之后在此回调函数中初始化评论
                             const { _id, title, content } = speak
                             const contentSub = content.substring(0, 30)
+
+                            init({
+                              el: '.ispeak-comment',
+                              serverURL: 'https://waline.imfmkli.top',
+                              requiredMeta: ['nick', 'mail'],
+                            });
                           }
                         })
                         .then(function () {
