--- a/say.html
+++ b/say.html
@@ -55,7 +55,7 @@
                             const { _id, title, content } = speak
                             const contentSub = content.substring(0, 30)
 
-                            init({
+                            const waline = init({
                               el: '.ispeak-comment',
                               serverURL: 'https://waline.imfmkli.top',
                               requiredMeta: ['nick', 'mail'],
