--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         var feedType = "xml";
         var feedPath = "https://blog.imfmkli.top/atom.xml";
         var bgArr = [{
-            "url": "https://www.imfmkli.top/image/place.jpg",
-            "thumb": "https://www.imfmkli.top/image/place.jpg"
+            "url": "https://www.imfmkli.top/images/place.jpg",
+            "thumb": "https://www.imfmkli.top/images/place.jpg"
         }];
         var senArr = [
             {
