--- a/index.html
+++ b/index.html
@@ -160,7 +160,12 @@
         var bgArr = [{
             "url": "https://www.imfmkli.top/images/place.jpg",
             "thumb": "https://www.imfmkli.top/images/place.jpg"
-        }];
+        },
+        {
+            "url": "https://www.imfmkli.top/images/places.jpg",
+            "thumb": "https://www.imfmkli.top/images/places.jpg" // 如果没有缩略图,可以留空.
+        }
+        ];
         var senArr = [
             {
                 ch: ["Welcome here!"],
