--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         autoplay="false"
         mutex="true"
         list-folded="true"
+        style="text-align: center;"
     ></meting-js>
     <div class="content-layer flex-center">
         <div class="content-container">
