--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@ Project Link: https://github.com/fly3949/fly.moe
     <title>Fly の 宅基地</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/minireset.css@0.0.3/minireset.min.css" integrity="sha256-rYUTtzummUpBJLuuLnVN9Hy06M9uLlZ8W8VZOyiX2WQ="
         crossorigin="anonymous">
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js" integrity="sha256-9uAoNWHdszsUDhSXf/rVcWOqKPfi5/8V5R4UdbZle2A=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js" integrity="sha256-nwhzW/P9gnvWMPOm84MK8BzQRRMdi8iutxMuYsYcOgw=" crossorigin="anonymous"></script>
@@ -38,7 +38,7 @@ Project Link: https://github.com/fly3949/fly.moe
         <div class="content">
             <div class="left">
                 <div class="avatar">
-                    <img src="assets/img/logo.jpg">
+                    <img src="/assets/img/logo.jpg">
                 </div>
                 <ul class="menu">
                     <li>
@@ -107,8 +107,8 @@ Project Link: https://github.com/fly3949/fly.moe
                 <section id="donate">
                     <h1>拯救吃土的 Fly</h1>
                     <div class="donate-img-box">
-                        <img src="assets/img/WeChat.png">
-                        <img src="assets/img/AliPay.png">
+                        <img src="/assets/img/WeChat.png">
+                        <img src="/assets/img/AliPay.png">
                     </div>
                 </section>
             </div>
@@ -126,7 +126,7 @@ Project Link: https://github.com/fly3949/fly.moe
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
