--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
 <script src="static/js/qita.js"></script>
 <script>
     (function () {
-        var feedType = "xml";
-        var feedPath = "https://blog.imfmkli.top/atom.xml";
+        var feedPath = "https://kkapi.imfmkli.top/api/ispeak?author=62fb537eea70bbc9782bcf6d&page=1&pageSize=10";
         var bgArr = [{
             "url": "https://www.imfmkli.top/images/place.jpg",
             "thumb": "https://www.imfmkli.top/images/place.jpg"
