--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             }
         ];
 
-        Init(feedType, feedPath, bgArr, senArr);
+        Init(feedPath, bgArr, senArr);
     })();
 </script>
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
