--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="self-content article-container">
                     <div class="article-content" id="shuoshuo"></div>
-                    <div class="article-loading flex-center">
+                    <div id="article-loading" class="article-loading flex-center">
                         <svg style="visibility: hidden" class="loading-indicator" width="128" height="128">
                             <g class="circle-rotating">
                                 <g class="circle-step">
