--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 
                 </div>
                 <div class="self-content article-container">
-                    <div class="article-content"><div id="shuoshuo2"></div></div>
+                    <div id="shuoshuo2"></div>
+                    <div class="article-content"></div>
                     <div id="article-loading" class="article-loading flex-center">
                         <svg style="visibility: hidden" class="loading-indicator" width="128" height="128">
                             <g class="circle-rotating">
