--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
                 </div>
                 <div class="self-content article-container">
+                    <h3>最近的说说</h3>
                     <div id="shuoshuo2"></div>
                     <div class="article-content"></div>
                     <div id="article-loading" class="article-loading flex-center">
