--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="btn-text">链接</div>
                 </div>
                 <div class="switcher-btn text-center" id="switcher-btn-2">
-                    <div class="btn-icon"><i class="fa fa fa-book"></i></div>
+                    <div class="btn-icon"><i class="fa fa-heart-o"></i></div>
                     <div class="btn-text">说说</div>
                 </div>
                 <div class="switcher-btn text-center" id="switcher-btn-3">
