--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
                 </div>
                 <div class="self-content article-container">
-                    <h2>最近的说说</h2><hr>
-                    <div id="shuoshuo2"></div>
+                    <h2 style="text-align: center;">最近的说说</h2><hr>
+                    <div id="shuoshuo2" style="text-align: center;"></div>
                     <div class="article-content"></div>
                     <div id="article-loading" class="article-loading flex-center">
                         <svg style="visibility: hidden" class="loading-indicator" width="128" height="128">
