--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                 </div>
                 <div class="self-content article-container">
-                    <h2 style="text-align: center;">最近的说说</h2><hr>
+                    <h2 style="text-align: center;" id="firsttitle">最近的说说</h2><hr>
                     <div id="shuoshuo2" style="text-align: center;"></div>
                     <div class="article-content"></div>
                     <div id="article-loading" class="article-loading flex-center">
