--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="link-icon"><i class="fa fa-question-circle"></i></div>
                         <div>隐私政策</div>
                     </a>
-                    <a href="https://no-paid-music.vercel.app/" class="link-item">
+                    <a href="http://no-paid-music.imfmkli.top/" class="link-item">
                         <div class="link-icon"><i class="fa fa-music"></i></div>
                         <div>音乐解锁</div>
                     </a>
