--- a/index.html
+++ b/index.html
@@ -181,7 +181,11 @@
         {
             "url": "https://www.imfmkli.top/images/places.jpg",
             "thumb": "https://www.imfmkli.top/images/places.jpg" // 如果没有缩略图,可以留空.
-        }
+        },
+        {
+            "url": "https://www.imfmkli.top/i2023.jpg",
+            "thumb": "https://www.imfmkli.top/i2023.jpg" // 如果没有缩略图,可以留空.
+        },
         ];
         var senArr = [
             {
