--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
             "thumb": "https://www.imfmkli.top/images/places.jpg" // 如果没有缩略图,可以留空.
         },
         {
-            "url": "https://www.imfmkli.top/i2023.jpg",
-            "thumb": "https://www.imfmkli.top/i2023.jpg" // 如果没有缩略图,可以留空.
+            "url": "https://www.imfmkli.top/i2023.png",
+            "thumb": "https://www.imfmkli.top/i2023.png" // 如果没有缩略图,可以留空.
         },
         ];
         var senArr = [
