--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                         <div class="link-icon"><i class="fa fa-lock"></i></div>
                         <div>密码生成</div>
                     </a>
+                    <a href="https://whois.imfmkli.top/" class="link-item">
+                        <div class="link-icon"><i class="fa fa-address-card"></i></div>
+                        <div>Whois查询</div>
+                    </a>
                     <a href="https://may.gee.bar/" class="link-item">
                         <div class="link-icon"><i class="fa fa-question-circle"></i></div>
                         <div>怪网站</div>
@@ -144,7 +148,7 @@
         </div>
         <div class="footer-container text-center">
             © 2022 By <a href="#">Fmkli</a> | Make by <a href="https://github.com/KawaiiZapic">Zapic</a>
-            <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
+            <br><a href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备 20221145 号</a>
         </div>
     </div>
     <meting-js
