--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@
             }, {
                 ch: ["欢迎", "来到", "这里", "。"],
                 py: ["huan'ying", "lai'dao", "zhe'li", "。"],
+            }, {
+                ch: ["只想", "做", "一个","安静的","小站", "。"],
+                py: ["zhi'xiang", "zuo", "yi'ge","an'jing'的","xiao'zhan", "。"],
+            }, {
+                ch: ["Never Gonna Give You Up!"],
+                py: ["Never Gonna Give You Up!"],
             }
         ];
 
