--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans" media="none" onload="this.media='all'">
 <script src="https://fastly.jsdelivr.net/gh/ClassicOldSong/typinyin.js@master/typinyin.min.js"></script>
+<script src="https://unpkg.com/marked@4.2.5/marked.min.js"></script>
 <script src="static/js/main.js"></script>
 <script src="static/js/qita.js"></script>
 <script>
