--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>鸽的主页</title>
+    <title>Fmkli的主页</title>
     <meta name="keywords" content="鸽子主页,Fmkli,imfmkli"/>
     <meta name="description" content="菜菜鸽子的主页，来吧来吧"/>
     <meta name="renderer" content="webkit">
