--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </g>
                 </g>
             </svg>
-            <img alt="" src="https://www.imfmkli.top/pigen.png" class="avatar-img no-delay"/>
+            <img alt="Fmkli" src="https://www.imfmkli.top/pigen.png" class="avatar-img no-delay"/>
         </div>
         <div class="loading-text text-center">
             <p class="loading-pre">Loading...</p>
