--- a/talk2.html
+++ b/talk2.html
@@ -5,6 +5,8 @@
     <title>留言板</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"JgapU3Sla12DMquS",ck:"JgapU3Sla12DMquS"})</script>
 </head>
             <div class="mdui-card card">
 
