--- a/say.html
+++ b/say.html
@@ -4,6 +4,8 @@
     <title>I'm Fmkli</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"JgapU3Sla12DMquS",ck:"JgapU3Sla12DMquS"})</script>
 </head>
             <!-- 捐赠卡片 -->
             <div class="mdui-card card">
