--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <div class="self-wrapper">
                 <div class="self-content links-container flex-center text-center">
                     <a href="#" class="link-item" mdui-dialog="{target: '#morecard'}">
-                        <div class="link-icon"><i class="fa fa-book"></i></div>
+                        <div class="link-icon"><i class="fa fa-address-book"></i></div>
                         <div>关于Fmkli</div>
                     </a>
                     <a href="https://blog.imfmkli.top/" class="link-item">
-                        <div class="link-icon"><i class="fa-address-book"></i></div>
+                        <div class="link-icon"><i class="fa fa-book"></i></div>
                         <div>博客</div>
                     </a>
                     <a href="https://blog2.imfmkli.top/" class="link-item">
