--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="content-container">
             <div class="self-wrapper">
                 <div class="self-content links-container flex-center text-center">
-                    <a href="" class="link-item" mdui-dialog="{target: '#morecard'}">
+                    <a href="#morecard" class="link-item" mdui-dialog="{target: '#morecard'}">
                         <div class="link-icon"><i class="fa fa-address-book"></i></div>
                         <div>关于Fmkli</div>
                     </a>
