--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <div class="content-container">
             <div class="self-wrapper">
                 <div class="self-content links-container flex-center text-center">
-                    <a href="?" class="link-item" mdui-dialog="{target: '#morecard'}">
+                    <button class="link-item" mdui-dialog="{target: '#morecard'}">
                         <div class="link-icon"><i class="fa fa-address-book"></i></div>
                         <div>关于Fmkli</div>
-                    </a>
+                    </button>
                     <a href="https://blog.imfmkli.top/" class="link-item">
                         <div class="link-icon"><i class="fa fa-book"></i></div>
                         <div>博客</div>
