--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                         <div class="mdui-card-primary-subtitle">鸽子咕咕咕</div>
                                     </div>
                                     <div class="mdui-card-content">
-                                        一只鸽子<br>开学后无法活跃
+                                        一只鸽子
                                     </div>
                                     <div class="mdui-card-actions">
                                         <button class="mdui-btn mdui-ripple"><a href="https://www.imfmkli.top/">鸽子主页</a></button>
@@ -200,6 +200,14 @@
                             </div>
                         </div>
                     </div>
+                    <!--可输入其他内容-->
+                    <p>Fmkli开学后无法活跃，Why？<br>可能因为</p>
+                    <ul>
+                      <li>Fmkli被Homework打败了</li>
+                      <li>Fmkli被学校禁锢了（住宿）</li>
+                      <li>懒啦！</li>
+                    </ul>
+                    <!--End-->
                 </div>
             </div>
 </body>
