--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
     ></meting-js>
 
     <!-- MoreCard-->
-    <div class="mdui-dialog" id="morecard" style="text-align: center;overflow-y: scroll;">
+    <div class="mdui-dialog" id="morecard" style="overflow-y: scroll;">
         <div class="mdui-card-content mdui-typo">
-            <div class="mdui-container" style="text-align: center;">
+            <div class="mdui-container">
                 <div class="mdui-row">
-                    <div class="mdui-col-sm-11 mdui-col-md-11">
+                    <div class="mdui-col-sm-11 mdui-col-md-11" style="text-align: center;">
                         <div class="mdui-card">
                             <div class="mdui-card-header">
                                 <img class="mdui-card-header-avatar" src="https://www.imfmkli.top/pigen.png"/>
