--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
                       <li>Fmkli被Homework打败了</li>
                       <li>Fmkli被学校禁锢了（住宿）</li>
                       <li>懒啦！</li>
+                      <li><h3>Error 404!</h3></li>
                     </ul>
                     <!--End-->
                 </div>
@@ -253,6 +254,9 @@
             }, {
                 ch: ["只想", "做", "一个","安静的","小站", "。"],
                 py: ["zhi'xiang", "zuo", "yi'ge","an'jing'的","xiao'zhan", "。"],
+            }, {
+                ch: ["一个", "挣扎", "存活","于","网络", "边缘", "的", "网站", "，", "默默无闻"],
+                py: ["yi'ge", "zheng'zha", "cun'huo","yv","wang'luo", "bian'yvan", "de", "wang'zhan", "，", "mo'mo'wu'wen"],
             }, {
                 ch: ["Never Gonna Give You Up!"],
                 py: ["Never Gonna Give You Up!"],
