--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <div class="self-content">
                     <div class="info-container center">
                         <button class="link-item-button" mdui-dialog="{target: '#morecard'}">
+                            <div class="link-icon"><i class="fa fa-address-book"></i></div>
                             <div>关于Fmkli</div>
                         </button>
                         一个挣扎存活于网络边缘的网站，默默无闻
