--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     <!-- MoreCard No.2-->
     <div class="mdui-dialog" id="morecard2" style="overflow-y: scroll;">
-        <div class="mdui-card-content mdui-typo" style="text-align: center;">
+        <div class="mdui-card-content mdui-typo" style="text-align: center; width: 100%;">
             <div class="mdui-container">
                 <div class="mdui-row">
                     <!--可输入其他内容-->
@@ -234,7 +234,7 @@
 
     <!-- MoreCard No.3-->
     <div class="mdui-dialog" id="morecard3" style="overflow-y: scroll;">
-        <div class="mdui-card-content mdui-typo" style="text-align: center;">
+        <div class="mdui-card-content mdui-typo" style="text-align: center; width: 100%;">
             <div class="mdui-container">
                 <div class="mdui-row">
                     <!--可输入其他内容-->
