--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
 <script src="./mdui/js/mdui.min.js"></script>
 <script>
     (function () {
-        var Bloglist = "https://blog.imfmkli.top/wp-json/wp/v2/posts"; //Blog文章解析，目前只支持Wordpress，Json格式
-        var feedPath = "https://kkapi.imfmkli.top/api/ispeak?author=62fb537eea70bbc9782bcf6d&page=1&pageSize=10";//说说解析，目前只支持KKapi
+        var Bloglist = "ttps://blog.imfmkli.top/wp-json/wp/v2/posts"; //Blog文章解析，目前只支持Wordpress，Json格式
+        var feedPath = "ttps://kkapi.imfmkli.top/api/ispeak?author=62fb537eea70bbc9782bcf6d&page=1&pageSize=10";//说说解析，目前只支持KKapi
         var bgArr = [{
             "url": "https://www.imfmkli.top/images/place.jpg",
             "thumb": "https://www.imfmkli.top/images/place.jpg"
